# Simple-Raytracer

./: README.md  main.cpp
SimpleRaytracer/: CMakeLists.txt  SimpleRaytracer.h  main.cpp
SimpleRaytracer/src/: Matrix.cpp  Matrix.h  OBB.cpp  OBB.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector3D.cpp  Vector3D.h  stb_image.h
